--- a/1.html
+++ b/1.html
@@ -12,10 +12,33 @@
         <li><a href="2.html">CSS</a><br></li>
         <li><a href="3.html">JavaScript</a><br></li>
     </ol>
-
+    <p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/2RSLw3eaaPE?si=B6RVOmmVBRyh88j6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </p>
     <h2>HTML</h2>
     <p>The <strong>HyperText Markup Language</strong> or <strong>HTML</strong> is the standard markup language for documents designed to be displayed in a web browser. It defines the content and structure of web content. It is often assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.</p>
-
+    <p>하이퍼텍스트 마크업 언어(HyperText Markup Language, HTML)는 웹 브라우저에 표시되도록 설계된 문서의 표준 마크업 언어입니다. <strong>웹 콘텐츠의 내용과 구조를 정의합니다.</strong> CSS(Cascading Style Sheets)와 같은 기술과 JavaScript와 같은 스크립팅 언어의 지원을 받는 경우가 많습니다.</p>
     <img src="https://play-lh.googleusercontent.com/RslBy1o2NEBYUdRjQtUqLbN-ZM2hpks1mHPMiHMrpAuLqxeBPcFSAjo65nQHbTA53YYn" width="250"height="200">
+    <div id="disqus_thread"></div>
+    <p>
+        <script>
+            /**
+            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+            /*
+            var disqus_config = function () {
+            this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+            this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+            };
+            */
+            (function() { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://first-web-viofkxzols.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+            })();
+        </script>
+    </p>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </body>
 </html>
