--- a/1.html
+++ b/1.html
@@ -20,7 +20,7 @@
     <p>하이퍼텍스트 마크업 언어(HyperText Markup Language, HTML)는 웹 브라우저에 표시되도록 설계된 문서의 표준 마크업 언어입니다. <strong>웹 콘텐츠의 내용과 구조를 정의합니다.</strong> CSS(Cascading Style Sheets)와 같은 기술과 JavaScript와 같은 스크립팅 언어의 지원을 받는 경우가 많습니다.</p>
     <img src="https://play-lh.googleusercontent.com/RslBy1o2NEBYUdRjQtUqLbN-ZM2hpks1mHPMiHMrpAuLqxeBPcFSAjo65nQHbTA53YYn" width="250"height="200">
     <div id="disqus_thread"></div>
-    <p>
+    <!-- <p> -->
         <!-- <script> -->
             /**
             *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
@@ -37,8 +37,8 @@
             s.setAttribute('data-timestamp', +new Date());
             (d.head || d.body).appendChild(s);
             })();
-        </script>
-    </p>
+        <!-- </script> -->
+    <!-- </p> -->
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </body>
 </html>
