--- a/1.html
+++ b/1.html
@@ -4,48 +4,25 @@
 <head>
     <title>HTML</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1><a href="index.html">WEB</a></h1>
-    <ol>
-        <li><a href="1.html">HTML</a><br></li>
-        <li><a href="2.html">CSS</a><br></li>
-        <li><a href="3.html">JavaScript</a><br></li>
-    </ol>
-    <p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/2RSLw3eaaPE?si=B6RVOmmVBRyh88j6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    </p>
-    <h2>HTML</h2>
-    <p>The <strong>HyperText Markup Language</strong> or <strong>HTML</strong> is the standard markup language for documents designed to be displayed in a web browser. It defines the content and structure of web content. It is often assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.</p>
-    <p>하이퍼텍스트 마크업 언어(HyperText Markup Language, HTML)는 웹 브라우저에 표시되도록 설계된 문서의 표준 마크업 언어입니다. <strong>웹 콘텐츠의 내용과 구조를 정의합니다.</strong> CSS(Cascading Style Sheets)와 같은 기술과 JavaScript와 같은 스크립팅 언어의 지원을 받는 경우가 많습니다.</p>
-    <img src="https://play-lh.googleusercontent.com/RslBy1o2NEBYUdRjQtUqLbN-ZM2hpks1mHPMiHMrpAuLqxeBPcFSAjo65nQHbTA53YYn" width="250"height="200">
-    <!-- <div id="disqus_thread"></div> -->
-    <!-- <p> -->
-        <!-- <script> -->
-            /**
-            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-            /*
-            var disqus_config = function () {
-            this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-            this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-            };
-            */
-            (function() { // DON'T EDIT BELOW THIS LINE
-            var d = document, s = d.createElement('script');
-            s.src = 'https://first-web-viofkxzols.disqus.com/embed.js';
-            s.setAttribute('data-timestamp', +new Date());
-            (d.head || d.body).appendChild(s);
-            })();
-        <!-- </script> -->
-    <!-- </p> -->
-<!-- <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript> -->
+    <div id="grid">
+        <ol>
+            <li><a href="1.html">HTML</a><br></li>
+            <li><a href="2.html">CSS</a><br></li>
+            <li><a href="3.html">JavaScript</a><br></li>
+        </ol>
+        
+        <div id="article">
+            <h2>HTML</h2>
+            <p>
+                <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/8QuxyL63jQY?si=eRLY0a8uM_B-CUht" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
+                Anker 7-in-1 USB-C 충전 스테이션은 전면에 USB-C 포트 2개와 USB-A 포트 2개, 후면에 AC 콘센트 3개가 있습니다. 따라서 최대 7개의 장치를 동시에 충전할 수 있습니다. USB-C를 단독으로 사용할 경우 최대 충전 속도는 100W입니다. Anker에 따르면 이 새로운 충전 스테이션은 30분 만에 16인치 MacBook Pro를 50%까지 충전할 수 있습니다. 두 개의 USB-C 포트를 동시에 사용할 경우 연결된 두 개의 기기에 67W:30W 또는 45W:45W의 전력을 공급할 수 있습니다. USB-A 포트는 최대 12W의 충전 속도를 제공합니다.
+            </p>
+        </div>
+    </div>
 </body>
 </html>
 
-
-
-
-
-
-<
