--- a/index.html
+++ b/index.html
@@ -1,26 +1,43 @@
 <!doctype html>
 <html>
-
 <head>
     <title>home</title>
     <meta charset="utf-8">
+    <style>
+        
+        a {
+            color:black;
+            text-decoration:none;
+        }
+        h1 {
+            font-size:40px;
+            text-align: center;
+            border:5px solid black;
+            padding:20px;
+        }
+        .saw {
+            color:gray
+        }
+        #active {
+            color:red
+        }
+    </style>
 </head>
 <body>
+
     <h1><a href="index.html">WEB</a></h1>
     <ol>
-        <li><a href="1.html">HTML</a><br></li>
-        <li><a href="2.html">CSS</a><br></li>
+        <li><a href="1.html" class="saw">HTML</a><br></li>
+        <li><a href="2.html" class="saw id="active"" >CSS</a><br></li>
         <li><a href="3.html">JavaScript</a><br></li>
     </ol>
 
-    <h2>WEB</h2>
-    <p>Hypertext Markup Language (HTML) is the standard
-        markup language for <strong>creating <u>web</u> pages</strong> and web
-        applications.</p>
-    <p style="margin-top:30px;">컴퓨터는 하나의 거대한 시입니다.<br>
-        컴퓨터가 차갑게 느껴질 수 있지만,<br>
-        컴퓨터 공학은 사실<br>
-        낭만적인 것으로 가득 차 있습니다.</p>
+    <h2>WEB</h2> 
+    
+    <p>
+        이찬영 이찬영 이찬영 이찬영<br>
+        이찬영 이찬영 이찬영 이찬영
+    </p>
 
     <img src="https://s3-ap-northeast-2.amazonaws.com/opentutorials-user-file/module/3135/7648.png" width="400"height="200">
 </body>
